poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  namespace: api
spec:
  selector:
    matchLabels:
      run: poi
  replicas: 1
  template:
    metadata:
      labels:
        run: poi

    spec:
      containers:
      - name: poi
        image: registryhwt0547.azurecr.io/tripinsights/poi:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
  labels:
    run: poi
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: poi
