trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: api
spec:
  selector:
    matchLabels:
      run: trips
  replicas: 1
  template:
    metadata:
      labels:
        run: trips

    spec:
      containers:
      - name: trips
        image: registryhwt0547.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
  labels:
    run: trips
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: trips
